current weather info added & typing fixed

--- a/index.html
+++ b/index.html
@@ -33,16 +33,29 @@
         </button>
       </nav>
       <header>
+        <div class="sh"></div>
         <div class="info">
-          <p class="location">Warszawa</p>
+          <p class="location">______</p>
           <p class="date">
             <span class="week-day"></span>,&nbsp;<span class="day-month"></span>
           </p>
           <div class="conditions">
-            <div class="weather-condition wind-speed"></div>
-            <div class="weather-condition pressure"></div>
-            <div class="weather-condition feelslike"></div>
-            <div class="weather-condition temp"></div>
+            <div class="weather-condition">
+              <img class="icon" src="./img/weather-icon/wind.svg" />
+              <p><span class="wind-speed">___</span> km/h</p>
+            </div>
+            <div class="weather-condition">
+              <img class="icon" src="./img/weather-icon/barometer.svg" />
+              <p><span class="pressure">___</span> hPa</p>
+            </div>
+            <div class="weather-condition">
+              <img class="icon" src="./img/weather-icon/thermometer.svg" />
+              <p><span class="temp">___</span>&deg;C</p>
+            </div>
+            <div class="weather-condition">
+              <img class="icon" src="./img/weather-icon/cloud.svg" />
+              <p><span class="cloudy">___</span>%</p>
+            </div>
           </div>
         </div>
         <div class="card-header"><img class="weather-img" /></div>
