--- a/index.html
+++ b/index.html
@@ -58,7 +58,16 @@
             </div>
           </div>
         </div>
-        <div class="card-header"><img class="weather-img" /></div>
+        <div class="card-header">
+          <div class="card-header-date">Teraz</div>
+          <img
+            class="weather-img"
+            src="//cdn.weatherapi.com/weather/64x64/day/116.png"
+          />
+          <div class="temperature-card">
+            <span class="temp-card">23</span>&deg;C
+          </div>
+        </div>
       </header>
       <main>
         <div class="day"></div>
