Temperature diagram created

--- a/index.html
+++ b/index.html
@@ -17,67 +17,57 @@
     <!---->
   </head>
   <body>
-      <nav class="wrapper">
-        <img src="./img/log.svg" class="logo" alt="webside logo" />
-        <h1>
-          <span class="logo-front">OLO</span><span class="logo-back">cast</span
-          ><button class="unit-btn">&deg;C</button>
-        </h1>
-        <div class="search-box">
-          <input class="search-input" type="search" />
-          <div class="search-option-box"></div>
-        </div>
-        <button class="find-weather">
-          <img src="./img/send.svg" alt="serach button image" />
-        </button>
-      </nav>
-      <header class="wrapper">
-        <div class="sh"></div>
-        <div class="info">
-          <p class="location">______</p>
-          <p class="date">
-            <span class="week-day"></span>,&nbsp;<span class="day-month"></span>
-          </p>
-          <div class="conditions">
-            <div class="weather-condition">
-              <img class="icon" src="./img/weather-icon/wind.svg" />
-              <p><span class="wind-speed">___</span> km/h</p>
-            </div>
-            <div class="weather-condition">
-              <img class="icon" src="./img/weather-icon/barometer.svg" />
-              <p><span class="pressure">___</span> hPa</p>
-            </div>
-            <div class="weather-condition">
-              <img class="icon" src="./img/weather-icon/thermometer.svg" />
-              <p><span class="temp">___</span>&deg;C</p>
-            </div>
-            <div class="weather-condition">
-              <img class="icon" src="./img/weather-icon/cloud.svg" />
-              <p><span class="cloudy">___</span>%</p>
-            </div>
+    <nav class="wrapper">
+      <img src="./img/log.svg" class="logo" alt="webside logo" />
+      <h1>
+        <span class="logo-front">OLO</span><span class="logo-back">cast</span
+        ><button class="unit-btn">&deg;C</button>
+      </h1>
+      <div class="search-box">
+        <input class="search-input" type="search" />
+        <div class="search-option-box"></div>
+      </div>
+      <button class="find-weather">
+        <img src="./img/send.svg" alt="serach button image" />
+      </button>
+    </nav>
+    <header class="wrapper">
+      <div class="sh"></div>
+      <div class="info">
+        <p class="location">______</p>
+        <p class="date">
+          <span class="week-day"></span>,&nbsp;<span class="day-month"></span>
+        </p>
+        <div class="conditions">
+          <div class="weather-condition">
+            <img class="icon" src="./img/weather-icon/wind.svg" />
+            <p><span class="wind-speed">___</span> km/h</p>
+          </div>
+          <div class="weather-condition">
+            <img class="icon" src="./img/weather-icon/barometer.svg" />
+            <p><span class="pressure">___</span> hPa</p>
+          </div>
+          <div class="weather-condition">
+            <img class="icon" src="./img/weather-icon/thermometer.svg" />
+            <p><span class="temp">___</span>&deg;C</p>
+          </div>
+          <div class="weather-condition">
+            <img class="icon" src="./img/weather-icon/cloud.svg" />
+            <p><span class="cloudy">___</span>%</p>
           </div>
         </div>
-        <div class="card-header">
-          <div class="card-header-date">Teraz</div>
-          <img
-            class="weather-img"
-          />
-          <div class="temperature-card">
-            <span class="temp-card">__</span>&deg;C
-          </div>
+      </div>
+      <div class="card-header">
+        <div class="card-header-date">Teraz</div>
+        <img class="weather-img" />
+        <div class="temperature-card">
+          <span class="temp-card">__</span>&deg;C
         </div>
-      </header>
-      <main class="wrapper">
-        <div class="cards-container">
-          <div class="card">
-            <img src="https://cdn2.iconfinder.com/data/icons/weather-365/64/weather-sun-cloud-rain-512.png" class="card__icon"></img>
-            <div class="card__time">14:00</div>
-            <div class="card__temperature">15&deg;C</div>
-            <div class="card__conditions"><span class="card__wind-speed">45km/h</span><span class="card__rain-chance">50%</span></div>
-            <div class="card__description">Slonecznie</div>
-          </div>
-          </div>
-      </main>
+      </div>
+    </header>
+    <main class="wrapper">
+      <div class="cards-container"></div>
+    </main>
     <script type="module" src="./js/main.js"></script>
     <script type="module" src="./js/api-weather.js"></script>
     <script type="module" src="./js/unit.js"></script>
