--- a/index.html
+++ b/index.html
@@ -18,50 +18,50 @@
   </head>
   <body>
     <nav class="wrapper">
-      <img src="./img/log.svg" class="logo" alt="webside logo" />
-      <h1>
-        <span class="logo-front">OLO</span><span class="logo-back">cast</span
-        ><button class="unit-btn">&deg;C</button>
+      <img src="./img/log.svg" class="nav__logo" alt="webside logo" />
+      <h1 class="nav__website-title">
+        <span class="nav__logo-bold">OLO</span><span class="nav__logo-thin">cast</span
+        ><button class="nav__unit-btn">&deg;C</button>
       </h1>
-      <div class="search-box">
-        <input class="search-input" type="search" />
-        <div class="search-option-box"></div>
+      <div class="nav__search-box">
+        <input class="nav__search-input" type="search" />
+        <div class="nav__browser-hint"></div>
       </div>
-      <button class="find-weather">
+      <button class="nav__find-weather">
         <img src="./img/send.svg" alt="serach button image" />
       </button>
     </nav>
     <header class="wrapper">
-      <div class="sh"></div>
+      <div class="header__sh"></div>
       <div class="info">
-        <p class="location">______</p>
-        <p class="date">
-          <span class="week-day"></span>,&nbsp;<span class="day-month"></span>
+        <p class="info__location">______</p>
+        <p class="info__date">
+          <span class="info__week-day"></span>,&nbsp;<span class="info__day-month"></span>
         </p>
         <div class="conditions">
-          <div class="weather-condition">
-            <img class="icon" src="./img/weather-icon/wind.svg" />
-            <p><span class="wind-speed">___</span> km/h</p>
+          <div class="conditions__weather-box">
+            <img class="conditions__icon" src="./img/weather-icon/wind.svg" />
+            <p><span class="conditions__wind-speed">___</span> km/h</p>
           </div>
-          <div class="weather-condition">
-            <img class="icon" src="./img/weather-icon/barometer.svg" />
-            <p><span class="pressure">___</span> hPa</p>
+          <div class="conditions__weather-box">
+            <img class="conditions__icon" src="./img/weather-icon/barometer.svg" />
+            <p><span class="conditions__pressure">___</span> hPa</p>
           </div>
-          <div class="weather-condition">
-            <img class="icon" src="./img/weather-icon/thermometer.svg" />
-            <p><span class="temp">___</span>&deg;C</p>
+          <div class="conditions__weather-box">
+            <img class="conditions__icon" src="./img/weather-icon/thermometer.svg" />
+            <p><span class="conditions__temp">___</span>&deg;C</p>
           </div>
-          <div class="weather-condition">
-            <img class="icon" src="./img/weather-icon/cloud.svg" />
-            <p><span class="cloudy">___</span>%</p>
+          <div class="conditions__weather-box">
+            <img class="conditions__icon" src="./img/weather-icon/cloud.svg" />
+            <p><span class="conditions__cloudy">___</span>%</p>
           </div>
         </div>
       </div>
       <div class="card-header">
-        <div class="card-header-date">Teraz</div>
-        <img class="weather-img" />
-        <div class="temperature-card">
-          <span class="temp-card">__</span>&deg;C
+        <div class="card-header__date">Teraz</div>
+        <img class="card-header__weather-img" />
+        <div class="card-header__temperature">
+          <span class="card-header__temp-num">__</span>&deg;C
         </div>
       </div>
     </header>
