--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </h1>
       <div class="nav__search-box">
         <input class="nav__search-input" type="search" />
-        <div class="nav__browser-hint"></div>
+        <div class="nav__browser-hints"></div>
       </div>
       <button class="nav__find-weather">
         <img src="./img/send.svg" alt="serach button image" />
